<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.paysim</groupId>
    <artifactId>paysim</artifactId>
    <version>2.5.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>8</source>
		    <target>8</target>
		    <compilerArgs>
			<arg>-Xlint:all</arg>
		    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.paysim.OriginalPaySim</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>org/paysim/**</include>
                            <include>org.apache.commons:*</include>
                            <include>commons-configuration:*</include>
                            <include>commons-lang:*</include>
                            <include>commons-collections:*</include>
                            <include>org.slf4j:*</include>
                            <include>org.apache.tinkerpop:*</include>
                            <include>cs.gmu.edu.eclab:*</include>
                            <include>com.github.voutilad:*</include>
                            <include>com.github.voutilad.mason:*</include>
                            <!-- JFairy Dependencies 8-( -->
                            <include>com.devskiller:*</include>
                            <include>org.yaml:*</include>
                            <include>com.google.guava:*</include>
                            <include>com.google.inject:*</include>
                            <include>com.google.inject.extensions:*</include>
                            <include>org.iban4j:*</include>
                            <include>javax.inject:*</include>
                            <include>aopalliance:*</include>
                        </includes>
                    </artifactSet>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.github.voutilad</groupId>
            <artifactId>mason</artifactId>
            <version>20-voutilad-1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tinkerpop</groupId>
            <artifactId>tinkergraph-gremlin</artifactId>
            <version>3.3.4</version>
        </dependency>
        <dependency>
            <groupId>com.devskiller</groupId>
            <artifactId>jfairy</artifactId>
            <version>0.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
            <version>5.5.2</version>
        </dependency>
    </dependencies>
</project>
